flask-pg/python-pg_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  generation: 14
  labels:
    app: python-pg
    app.kubernetes.io/component: python-pg
    app.kubernetes.io/instance: python-pg
  name: python-pg
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: python-pg
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: python-pg
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: hippo-ha
        - name: DB_USER
          value: araujovi
        - name: DB_PW
          value: dbpass
        - name: DB_NAME
          value: pgmig
        image: image-registry.openshift-image-registry.svc:5000/eagle-virgilio/python-pg@sha256:6d8cfd2b53a3ad37b7f5f988c92c2fa14500099e0e160cefea6a44648e421394
        imagePullPolicy: IfNotPresent
        name: python-pg
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
