flask-pg/python-pg_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-pg
    app.kubernetes.io/component: python-pg
    app.kubernetes.io/instance: python-pg
  name: python-pg
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    deployment: python-pg
status:
  loadBalancer: {}
